--- a/Calcc.html
+++ b/Calcc.html
@@ -45,33 +45,33 @@
 
 <body>
     <div>
-        <input type="text" , id="pole" , class="wind" />
+        <input type="text" id="pole" class="wind" />
 
-        <input type="button" , value="C" , onclick="document.getElementById('pole').value = ''" class="but" />
-        <input type="button" , value="Backspace" , onclick="document.getElementById('pole').value = document.getElementById('pole').value.substring(0,pole.value.length-1)" class="backspace" />
+        <input type="button" value="C" onclick="document.getElementById('pole').value = ''" class="but" />
+        <input type="button" value="Backspace" onclick="document.getElementById('pole').value = document.getElementById('pole').value.substring(0,pole.value.length-1)" class="backspace" />
         <br>
-        <input type="button" , value="1" , onclick="document.getElementById('pole').value += 1" class="but" />
-        <input type="button" , value="2" , onclick="document.getElementById('pole').value += 2" class="but" />
-        <input type="button" , value="3" , onclick="document.getElementById('pole').value += 3" class="but" />
-        <input type="button" , value="+" , onclick="document.getElementById('pole').value += '+'" class="but" />
-        <br>
-
-        <input type="button" , value="4" , onclick="document.getElementById('pole').value += 4" class="but" />
-        <input type="button" , value="5" , onclick="document.getElementById('pole').value += 5" class="but" />
-        <input type="button" , value="6" , onclick="document.getElementById('pole').value += 6" class="but" />
-        <input type="button" , value="-" , onclick="document.getElementById('pole').value += '-'" class="but" />
+        <input type="button" value="1" onclick="document.getElementById('pole').value += 1" class="but" />
+        <input type="button" value="2" onclick="document.getElementById('pole').value += 2" class="but" />
+        <input type="button" value="3" onclick="document.getElementById('pole').value += 3" class="but" />
+        <input type="button" value="+" onclick="document.getElementById('pole').value += '+'" class="but" />
         <br>
 
-        <input type="button" , value="7" , onclick="document.getElementById('pole').value += 7" class="but" />
-        <input type="button" , value="8" , onclick="document.getElementById('pole').value += 8" class="but" />
-        <input type="button" , value="9" , onclick="document.getElementById('pole').value += 9" class="but" />
-        <input type="button" , value="*" , onclick="document.getElementById('pole').value += '*'" class="but" />
+        <input type="button" value="4" onclick="document.getElementById('pole').value += 4" class="but" />
+        <input type="button" value="5" onclick="document.getElementById('pole').value += 5" class="but" />
+        <input type="button" value="6" onclick="document.getElementById('pole').value += 6" class="but" />
+        <input type="button" value="-" onclick="document.getElementById('pole').value += '-'" class="but" />
         <br>
 
-        <input type="button" , value="0" , onclick="document.getElementById('pole').value += 0" class="but" />
-        <input type="button" , value="." , onclick="document.getElementById('pole').value += '.'" class="but" />
-        <input type="button" , value="/" , onclick="document.getElementById('pole').value += '/'" class="but" />
-        <input type="button" , value="=" , onclick="document.getElementById('pole').value = eval(document.getElementById('pole').value)" class="but" />
+        <input type="button" value="7" onclick="document.getElementById('pole').value += 7" class="but" />
+        <input type="button" value="8" onclick="document.getElementById('pole').value += 8" class="but" />
+        <input type="button" value="9" onclick="document.getElementById('pole').value += 9" class="but" />
+        <input type="button" value="*" onclick="document.getElementById('pole').value += '*'" class="but" />
+        <br>
+
+        <input type="button" value="0" onclick="document.getElementById('pole').value += 0" class="but" />
+        <input type="button" value="." onclick="document.getElementById('pole').value += '.'" class="but" />
+        <input type="button" value="/" onclick="document.getElementById('pole').value += '/'" class="but" />
+        <input type="button" value="=" onclick="document.getElementById('pole').value = eval(document.getElementById('pole').value)" class="but" />
     </div>
 
 </body>
